Bug 418850 - Missing support for selecting object widgets by clicking on the sequence line
Summary: Missing support for selecting object widgets by clicking on the sequence line
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.30.3 (KDE releases 19.12.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-14 16:09 UTC by Ralf Habacker
Modified: 2020-03-14 16:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.30.80 (KDE releases 20.03.80)
Sentry Crash Report:


Attachments
test case (15.35 KB, application/x-uml)
2020-03-14 16:09 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-03-14 16:09:22 UTC
Created attachment 126783 [details]
test case

STEPS TO REPRODUCE
1. start umbrello
2. load appended test case
3. open sequence diagram and scroll down to the message widget

OBSERVED RESULT
Since the object widgets are located outside the window, it is not possible to select them by clicking on the sequence line, e.g. to adjust the documentation.

EXPECTED RESULT
It should be possible to select an object widget by clicking on its sequence line.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 15.1
KDE Frameworks Version: 5.55.1
Qt Version: 5.9.7
Comment 1 Ralf Habacker 2020-03-14 16:12:39 UTC
Git commit eb42f7254a75b67a7dfd2d2053fd05b9e73839a3 by Ralf Habacker.
Committed on 14/03/2020 at 16:12.
Pushed by habacker into branch 'master'.

Add suppport for selecting object widgets by clicking on its sequence line
FIXED-IN:2.30.80 (KDE releases 20.03.80)

M  +6    -0    umbrello/toolbarstate.cpp

https://invent.kde.org/kde/umbrello/commit/eb42f7254a75b67a7dfd2d2053fd05b9e73839a3