Add suppport for selecting object widgets by clicking on its sequence line

BUG:418850
FIXED-IN:2.30.80 (KDE releases 20.03.80)